apps/itsf/service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-itsf
spec:
  selector:
    app: nginx-itsf
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
