apps/itsf/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: itsf-ingress
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  rules:
    - host: hello-itsf.local.domain
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-itsf
                port:
                  number: 8080
  tls:
    - hosts:
        - hello-itsf.local.domain
      secretName: itsf-cert
